syntax = "proto3";

option csharp_namespace = "GrpcAuth";

package auth;

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
    string message = 3;
    int32 status_code = 4;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string message = 1;
    int32 status_code = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    string message = 1;
    int32 status_code = 2;
}
